Fixed srcs for img files

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                         <div class="col-lg-5 text-center text-lg-left">
                             <img 
                               class="img-fluid" 
-                              src="./img/shiny_pokemon_rainbow/Pokeball.png"
+                              src="{{ url_for('static', filename='/img/shiny_pokemon_rainbow/Pokeball.png') }}"
                               alt="Pokeball">
                         </div>
                         <div class="col-lg-7">
@@ -248,7 +248,7 @@
                             </div>
                             <div class="col-md-6 col-lg-4">
                                 <div class=" overlay rounded z-depth-1">
-                                    <img src="./img/shiny_pokemon_rainbow/black_shiny.gif" class="img-fluid"
+                                    <img src="{{ url_for('static', filename='/img/shiny_pokemon_rainbow/black_shiny.gif') }}" class="img-fluid"
                                         alt="Black shinies" />
                                     <a href="#">
                                         <div class="mask rgba-white-slight"></div>
@@ -259,7 +259,7 @@
                         <div class="row mb-5 d-flex align-items-center justify-content-end">
                             <div class="col-md-6 col-lg-4">
                                 <div class=" overlay rounded z-depth-1">
-                                    <img src="./img/shiny_pokemon_rainbow/blue_shiny.gif" class="img-fluid"
+                                    <img src="{{ url_for('static', filename='img/shiny_pokemon_rainbow/blue_shiny.gif') }}" class="img-fluid"
                                         alt="Blue Shinies" />
                                     <a href="#">
                                         <div class="mask rgba-white-slight"></div>
@@ -294,7 +294,7 @@
                             </div>
                             <div class="col-md-6 col-lg-4">
                                 <div class=" overlay rounded z-depth-1">
-                                    <img src="./img/shiny_pokemon_rainbow/fuschia_shiny.gif" class="img-fluid"
+                                    <img src="{{ url_for('static', filename='img/shiny_pokemon_rainbow/fuschia_shiny.gif') }}" class="img-fluid"
                                         alt="Fusic Shinies" />
                                     <a href="#">
                                         <div class="mask rgba-white-slight"></div>
